--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,8 @@ Lars Volkhardt <Lars.Volkhardt@uni-konstanz.de> (save callerid list to file)
 
 Mario Andrés Pagella <mapagella@fitzroy-is.com.ar> (project logo)
 
+Ivan Schreter <schreter@gmx.net> (CAPI 2.0 support, ALSA support, low-latency)
+
 Translators:
   FACORAT Fabrice <f.faber-pro@ifrance.com> (French)
   Roel Koelewijn <rl.koelewijn@home.nl> (Dutch)
