--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+ant-phone 0.2.1, 2008-02-04, Ivan Schreter <schreter@gmx.net>
+	* Added combo boxes for selection of ALSA devices for input/output
+
 ant-phone 0.2.0, 2007-11-25, Ivan Schreter <schreter@gmx.net>
 	* Re-work of session handling to use sound and ISDN threads, which
           greatly reduces latency and CPU usage
