--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* Updated German and Vietnamese translations
+
 ant-phone 0.2.1, 2008-02-04, Ivan Schreter <schreter@gmx.net>
 	* Added combo boxes for selection of ALSA devices for input/output
 
