Added Finnish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 	* Updated German, Swedish and Vietnamese translations
+	* Added Finnish translation
 
 ant-phone 0.2.1, 2008-02-04, Ivan Schreter <schreter@gmx.net>
 	* Added combo boxes for selection of ALSA devices for input/output
