--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-	* Updated German, Swedish and Vietnamese translations
+	* Updated German, Italian, Swedish and Vietnamese translations
 	* Added Finnish translation
 
 ant-phone 0.2.1, 2008-02-04, Ivan Schreter <schreter@gmx.net>
